Fix options button align.

--- a/code/css/options.scss
+++ b/code/css/options.scss
@@ -20,13 +20,14 @@
   margin: 20px 0 0 10px;
 }
 
-.header {
+.hdr {
   background-color: #036564;
   color: #FFFFFF;
   width: 100%;
   height: 100px;
   padding: 10px;
   vertical-align: middle;
+  position: relative;
   h2 {
     display: inline-block;
     line-height: 100px;
@@ -37,5 +38,7 @@
   float: right;
   margin-right: 5px;
   display: inline-block;
-  line-height: 100px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
